# bomberman-rust-tournament

./: AGENTS.md  Cargo.toml  README.md  test_config.rs
.github/workflows/: ci.yml
Docs/: Architecture.md  low_lvl_design.md
Docs/architecture/: 00_preface.md  01_executive_summary.md  02_domain_and_terminology.md  03_global_non_functional_requirements.md  04_high_level_architecture_overview.md  05_module_by_module_specification.md  06_data_structure_cheat_sheet.md  07_threading_and_concurrency_model.md  08_extensibility_hooks.md  09_testing_strategy.md  10_sample_threaded_loop_async_flavor.md  11_roadmap_for_future_work.md  12_revised_crate_layout.md  13_ci_and_quality_gates.md  14_usage_from_a_new_crate.md  15_common_design_patterns.md
Docs/backlog/: backlog.md  completed.md  requirements.md
Docs/completed/: features.md
Docs/design/: 00_preface.md  01_executive_summary.md  03_concurrency_and_threading_model.md  04_memory_management_strategy.md  05_performance_optimization_plan.md  06_integration_design.md  07_testing_strategy.md  (+14 more)
Docs/examples/example_crate/: Cargo.toml  README.md  justfile
Docs/examples/example_crate/.github/workflows/: ci.yml
Docs/examples/example_crate/examples/: demo.rs  simple.rs
Docs/examples/example_crate/src/: README.md  config.rs  container.rs  error.rs  lib.rs
Docs/examples/example_crate/src/adapters/: mod.rs  uuid_string_adapter.rs
Docs/examples/example_crate/src/examples/: console_messenger.rs  greeter.rs  mod.rs
Docs/examples/example_crate/src/helpers/: README.md  formatter.rs  mod.rs  string_helpers.rs
Docs/examples/example_crate/src/implementations/: english_greeter.rs  mod.rs
Docs/examples/example_crate/src/models/: README.md  greeting.rs  mod.rs
Docs/examples/example_crate/src/processors/: README.md  greeter.rs  hello_world.rs  mod.rs
Docs/examples/example_crate/src/providers/: README.md  mod.rs  name_provider.rs  uuid.rs
Docs/examples/example_crate/src/services/: README.md  greeter.rs  greeting.rs  greeting_service.rs  greeting_service_builder.rs  mod.rs  simple_greeting_service.rs
Docs/examples/example_crate/src/services/builders/: greeting_service_builder.rs
Docs/examples/example_crate/src/services/greeting/: builder.rs  mod.rs  service.rs
Docs/examples/example_crate/src/traits/: greeter.rs  mod.rs
Docs/examples/example_crate/tests/: adapters_tests.rs  config_tests.rs  container_tests.rs  greeter_tests.rs  greeting_service_tests.rs  helpers_tests.rs  integration_test.rs  models_tests.rs  processor_tests.rs  proptests.rs  services_tests.rs  simple_greeting_service_tests.rs
benches/: performance_benchmarks.rs
config/: default.toml
crates/bombs/: Cargo.toml
crates/bombs/src/: chain.rs  explosion.rs  lib.rs  logic.rs
crates/bombs/src/analysis/: danger.rs  mod.rs  opportunity.rs
crates/bombs/src/bomb/: chain.rs  entity.rs  explosion.rs  mod.rs
crates/bombs/src/placement/: mod.rs  placer.rs  safe.rs  strategic.rs  tactical.rs
crates/bombs/src/power/: kick.rs  mod.rs  power_calc.rs
crates/bombs/src/timing/: mod.rs  remote.rs  timer.rs
crates/bot/: Cargo.toml
crates/bot/src/: error.rs  lib.rs
crates/bot/src/action/: commands.rs  executor.rs  feedback.rs  mod.rs
crates/bot/src/ai/: heuristic_ai.rs  mod.rs  pipeline.rs  planning_ai.rs  reactive_ai.rs  rl_ai.rs
crates/bot/src/bot/: config.rs  decision.rs  kernel.rs  mod.rs  state.rs
crates/bot/src/perception/: memory.rs  mod.rs  observation.rs  system.rs
crates/bot/tests/: ai_modules.rs  bot_behavior.rs  decision_loop.rs  perception_action.rs
crates/common/: Cargo.toml
crates/common/src/: diagnostics.rs  error.rs  lib.rs  logging.rs
crates/engine/: Cargo.toml
crates/engine/benches/: performance_benchmarks.rs
crates/engine/src/: display.rs  lib.rs  main.rs  tournament.rs
crates/engine/src/bot/: mod.rs
crates/engine/src/config/: engine_config.rs  game_rules.rs  mod.rs  tournament_config.rs  unified_config.rs
crates/engine/src/engine/: game_engine.rs  mod.rs  movement_test.rs  scheduler.rs
crates/engine/src/simulation/: determinism.rs  mod.rs  replay.rs
crates/engine/src/systems/: bomb_system.rs  explosion.rs  mod.rs  movement.rs  player.rs  powerup.rs
crates/engine/src/tournament/: game_session.rs  registry.rs  scheduler.rs  scoring.rs
crates/influence/: Cargo.toml
crates/influence/benches/: update.rs
crates/influence/src/: layers.rs  lib.rs  map.rs
crates/influence/src/core/: danger.rs  influence_map.rs  layer.rs  mod.rs  opportunity.rs
crates/influence/src/update/: dirty_tracking.rs  full.rs  incremental.rs  mod.rs
crates/influence/src/visualization/: export.rs  mod.rs  renderer.rs
crates/influence/tests/: update_strategies.rs  visualization.rs
crates/path/: Cargo.toml
crates/path/benches/: cache_bench.rs
crates/path/src/: finder.rs  lib.rs  path.rs
crates/path/src/algorithms/: astar.rs  dstar_lite.rs  jps.rs  mod.rs
crates/path/src/cache/: cache_key.rs  cache_policy.rs  mod.rs  path_cache.rs
crates/path/src/grid/: cost.rs  mod.rs  node.rs  path_grid.rs
crates/path/src/heuristic/: euclidean.rs  manhattan.rs  mod.rs
crates/path/src/optimization/: mod.rs  simplification.rs  smoothing.rs
crates/path/tests/: algorithm_tests.rs  cache_tests.rs  grid_tests.rs  heuristic_tests.rs  optimization_tests.rs
crates/rl/: Cargo.toml
crates/rl/src/: error.rs  lib.rs  types.rs
crates/rl/src/environment/: env.rs  mod.rs  observation.rs  reward.rs
crates/rl/src/policy/: mod.rs  policy_trait.rs  random_policy.rs  torch_policy.rs
crates/rl/src/training/: buffer.rs  mod.rs  reward.rs  trainer.rs
crates/rl/src/value/: mod.rs  torch_value.rs  value_estimator.rs
crates/rl/tests/: policy_tests.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/state/src/components/: agent.rs  bomb.rs  mod.rs
crates/state/src/grid/: delta.rs  game_grid.rs  mod.rs  tile.rs
crates/state/src/serialization/: decoder.rs  encoder.rs  mod.rs
crates/state/src/state/: entity.rs  game_state.rs  mod.rs  snapshot.rs
tests/: edge_cases.rs  game_integration.rs  integration_tests.rs  workspace_build.rs
(+46 files in other folders)
