[workspace]
members = [
    "crates/state",
    "crates/engine",
    "crates/influence",
    "crates/path",
    "crates/goals",
    "crates/bombs",
    "crates/bot",
    "crates/events",
    "crates/rl",
    "crates/test_utils",
    "crates/ffi",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
criterion = "0.3"
proptest = "1.0"
ndarray = "0.15"
petgraph = "0.6"
triomphe = "0.1"
anyhow = "1.0"
tch = "0.7"
