[workspace]
members = [
    "crates/state",
    "crates/engine",
    "crates/influence",
    "crates/path",
    "crates/goals",
    "crates/bombs",
    "crates/bot",
    "crates/events",
    "crates/rl",
    "crates/test_utils",
    "crates/ffi",
    "crates/common",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
crossbeam-epoch = "0.9"
criterion = "0.3"
proptest = "1.0"
ndarray = "0.15"
petgraph = "0.6"
triomphe = "0.1"
anyhow = "1.0"
tch = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "1"
rand = "0.8"
tempfile = "3"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

