[package]
name = "bombs"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
state = { path = "../state" }
events = { path = "../events" }
log = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
