[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
events = { path = "../events" }
state = { path = "../state" }
crossbeam = { workspace = true }
thiserror = { workspace = true }
goals = { path = "../goals" }
path = { path = "../path" }
influence = { path = "../influence" }
rl = { path = "../rl" }
tch = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
