[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
events = { path = "../events" }
state = { path = "../state" }
crossbeam = { workspace = true }
thiserror = { workspace = true }
goals = { path = "../goals" }
path = { path = "../path" }
influence = { path = "../influence" }
bombs = { path = "../bombs" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
tokio-test = { workspace = true }
mockall = { workspace = true }
proptest = { workspace = true }
test_utils = { path = "../test_utils" }

[features]
default = []
