[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
events = { path = "../events" }
state = { path = "../state" }
crossbeam = { workspace = true }
thiserror = { workspace = true }
goals = { path = "../goals" }
path = { path = "../path" }
influence = { path = "../influence" }
bombs = { path = "../bombs" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []