[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
engine = { path = "../engine" }
bot = { path = "../bot" }
events = { path = "../events" }

