[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }

[features]
default = []

