[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
num_cpus = "1.13"
state = { path = "../state" }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
events = { path = "../events" }
bombs = { path = "../bombs" }
crossbeam = { workspace = true }
