[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { workspace = true }
num_cpus = "1.13"
state = { path = "../state" }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
events = { path = "../events" }
bombs = { path = "../bombs" }
crossbeam = { workspace = true }
bot = { path = "../bot" }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = "0.11"

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
tokio-test = { workspace = true }
mockall = { workspace = true }
proptest = { workspace = true }
test_utils = { path = "../test_utils" }

[features]
default = ["tournament"]
tournament = []
rl = []
