[package]
name = "influence"
version = "0.1.0"
edition = "2021"

[dependencies]
state = { path = "../state" }
events = { path = "../events" }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
ndarray = "0.15"
nalgebra = "0.32"

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "update"
harness = false
