[package]
name = "state"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-epoch = { workspace = true }
triomphe = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

log = { workspace = true }


