[package]
name = "example_crate"
version = "0.2.0"
edition = "2021"

[dependencies]
thiserror = "1"
shaku = { version = "0.6", features = ["derive"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"

[features]
default = []
serde = ["dep:serde"]
