[package]
name = "example_crate"
version = "0.2.0"
edition = "2021"

[dependencies]
thiserror = "1"
shaku = { version = "0.6", features = ["derive"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"

[features]
default = []
serde = ["dep:serde"]
logging = ["dep:tracing", "dep:tracing-subscriber"]

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
required-features = ["logging"]
