[package]
name = "example_crate"
version = "0.2.0"
edition = "2021"
authors = ["Example Maintainer <maintainer@example.com>"]
description = "Reference service-oriented crate for AI agents"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/harmenhilversalten/bomberman-rust-tournament"
repository = "https://github.com/harmenhilversalten/bomberman-rust-tournament"
keywords = ["dependency-injection", "template", "example", "services", "di"]
categories = ["development-tools", "game-engines"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = "1"
shaku = { version = "0.6", features = ["derive"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"
serde_json = "1"

[features]
default = []
serde = ["dep:serde"]
logging = ["dep:tracing", "dep:tracing-subscriber"]
async = []

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
required-features = ["logging"]
